--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header__wrapper" id="header">
                 <div class="logo__wrapper">
                     <div class="logo__images">
-                        <img src="/images/icons/hamburger-icon.svg" alt="hamburger-icon">
+                        <img src="./images/icons/hamburger-icon.svg" alt="hamburger-icon">
                     </div>
                     <p class="logo__title">товары <br> и точка</p>
 
@@ -34,11 +34,11 @@
                 </div>
                 <nav class="header__menu">
                     <div class="item-menu">
-                        <img src="/images/icons/eclude-icon.svg" alt="profile">
+                        <img src="./images/icons/eclude-icon.svg" alt="profile">
                         <a class="item-menu__link" href="#">Профиль</a>
                     </div>
                     <div class="item-menu" id="label__wrapper">
-                        <img src="/images/icons/basket-icon.svg" alt="basket">
+                        <img src="./images/icons/basket-icon.svg" alt="basket">
                         <a class="item-menu__link" href="#">Корзина</a>
                         <p class="label__amount">0</p>
                     </div>
